--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,7 @@ dependencies {
   compile 'com.android.support:recyclerview-v7:25.3.1'
   testCompile 'junit:junit:4.12'
   compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
+  // Network
+  compile 'com.squareup.retrofit2:converter-gson:2.3.0'
 }
