--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: 'dependencies.gradle'
 
 buildscript {
-  ext.kotlin_version = '1.1.2-4'
+  ext.kotlin_version = '1.1.2-5'
   repositories {
     maven { url 'https://maven.google.com' }
     jcenter()
@@ -19,6 +20,7 @@ allprojects {
   repositories {
     jcenter()
     maven { url 'https://maven.google.com' }
+    maven { url 'https://jitpack.io' }
     mavenCentral()
   }
 }
